--- a/website/styles.css
+++ b/website/styles.css
@@ -7,7 +7,7 @@
     --celtic-blue: #276fbf;
 }
 
-/* */
+/* define the margin and the padding of the whole page*/
 *{
     margin: 0;
     padding: 0;
